<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/headReg"
                android:textColor="@color/main"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="40dp"
                android:hint="@string/fieldsName"
                android:textSize="14sp"
                android:textColorHint="@color/text"
                android:paddingLeft="25dp"
                android:background="@drawable/style_txt"
                app:layout_constraintTop_toBottomOf="@+id/txtRegistration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/etSurname"/>
            <EditText
                android:id="@+id/etSurname"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="40dp"
                android:hint="@string/fieldsSurname"
                android:textSize="14sp"
                android:textColorHint="@color/text"
                android:paddingLeft="25dp"
                android:background="@drawable/style_txt"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/etPatronumic"/>
            <EditText
                android:id="@+id/etPatronumic"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="40dp"
                android:hint="@string/fieldsPatronymic"
                android:textSize="14sp"
                android:textColorHint="@color/text"
                android:paddingLeft="25dp"
                android:background="@drawable/style_txt"
                app:layout_constraintTop_toBottomOf="@+id/etSurname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/etLogin"/>


            <EditText
                android:id="@+id/edAges"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_txt"
                android:hint="Age"
                android:paddingLeft="25dp"
                android:textColorHint="@color/text"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btnReg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPassword" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="15dp"
                android:hint="Login"
                android:textColorHint="@color/text"
                android:paddingLeft="25dp"
                android:background="@drawable/style_txt"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPatronumic"
                app:layout_constraintBottom_toTopOf="@+id/edPassword"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPassword"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLogin"
                app:layout_constraintBottom_toTopOf="@+id/edAges"
                android:textColorHint="@color/text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_txt"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/main"
                    android:password="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/btnReg"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_btn"
                android:onClick="onRegistration"
                android:text="Register"
                android:textColor="@color/text"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edAges" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>