<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_LogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/headLog"
                android:textColor="@color/main"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textLogin"
                app:layout_constraintStart_toStartOf="@+id/textLogin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textLogin"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_txt"
                android:hint="@string/fieldsPhoneEmail"
                android:paddingLeft="25dp"
                android:textColorHint="@color/text"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_LogIn" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPassword"
                android:layout_width="350sp"
                android:layout_height="55sp"
                android:layout_marginTop="17sp"
                android:textColorHint="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLogin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_txt"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="26sp"
                    android:password="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <android.widget.Button
                android:id="@+id/btnLogIn"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/style_btn"
                android:onClick="onClick"
                android:text="Log in"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtOR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPassword" />

            <TextView
                android:id="@+id/txtOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="OR"
                android:textColor="@color/text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <TextView
                android:id="@+id/txtRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="45dp"
                android:clickable="true"
                android:onClick="onReg"
                android:text="@string/txtRegAccount"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOR" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>